--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "videitos",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "license": "la mía XD",
   "homepage": "https://github.com/Jotade100/youtubeCLI/blob/master/README.md",
   "repository": {
@@ -25,6 +25,6 @@
     "fs": "0.0.1-security",
     "minimist": "^1.2.0",
     "ora": "^3.0.0",
-    "youtube-dl": "^1.11.1"
+    "youtube-dl": "1.11.1"
   }
 }
